<?xml version="1.0" encoding="utf-8"?>
<package format="2">
  <name>acmerobotics</name>
  <version>1.0.0</version>
  <description>Robotic Arm Inverse kinematic planning software</description>

  <maintainer email="aswath@umd.edu">Aswath</maintainer>
  <maintainer email="kavya@umd.edu">Kavya</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>interactive_markers</depend>
  <depend>message_filters</depend>
  <depend version_gte="1">pluginlib</depend>
  <depend>actionlib</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>srdfdom</depend>
  <depend>urdf</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <build_depend>eigen</build_depend>

</package>
